<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    tools:context=".views.activities.account.CompleteAccountActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutAccountDetailRegisterHeader"
        style="@style/style_header_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:id="@+id/imgBackFromAccountDetailRegister"
            style="@style/style_icon"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/txtHeader"
            style="@style/style_txt_header"
            android:text="COMPLETE  PROFILE"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgBackFromAccountDetailRegister"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/imgAccountInfoHome"/>

        <ImageView
            android:id="@+id/imgAccountInfoHome"
            style="@style/style_icon"
            android:src="@drawable/ic_home"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/layoutAccountDetailRegisterHeader"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtLoginMethod"
                android:text="WSGroup Account"
                android:paddingTop="20dp"
                android:paddingBottom="7dp"
                android:gravity="center"
                android:textSize="20sp"
                style="@style/style_background_header"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/gray_background">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutUsername"
                    style="@style/style_profile_tab"
                    android:padding="0dp"
                    android:layout_marginVertical="2dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username_hint"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintTextColor="@color/blue_dark"
                        android:textColorHint="@color/gray_dark"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editUsername"
                            android:maxLength="20"
                            android:singleLine="true"
                            style="@style/style_text_input_edit"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    style="@style/style_profile_tab"
                    android:padding="0dp"
                    android:layout_marginBottom="2dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/number_hint"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintTextColor="@color/blue_dark"
                        android:textColorHint="@color/gray_dark"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editPhoneNumber"
                            android:maxLength="13"
                            android:singleLine="true"
                            android:text="+84 "
                            android:inputType="number"
                            style="@style/style_text_input_edit" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/layoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        style="@style/style_profile_tab"
                        android:padding="0dp"
                        android:layout_marginBottom="2dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password_hint"
                            app:boxStrokeWidth="0dp"
                            app:boxStrokeWidthFocused="0dp"
                            app:hintTextColor="@color/blue_dark"
                            android:textColorHint="@color/gray_dark"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editLoginPassword"
                                android:maxLength="20"
                                android:singleLine="true"
                                android:inputType="textPassword"
                                style="@style/style_text_input_edit"/>

                        </com.google.android.material.textfield.TextInputLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        style="@style/style_profile_tab"
                        android:padding="0dp"
                        android:layout_marginBottom="2dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/confirm_password_hint"
                            app:boxStrokeWidth="0dp"
                            app:boxStrokeWidthFocused="0dp"
                            app:hintTextColor="@color/blue_dark"
                            android:textColorHint="@color/gray_dark"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editPasswordConfirm"
                                android:maxLength="20"
                                android:singleLine="true"
                                android:inputType="textPassword"
                                style="@style/style_text_input_edit"/>

                        </com.google.android.material.textfield.TextInputLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    style="@style/style_profile_tab"
                    android:padding="0dp"
                    android:layout_marginBottom="2dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name_hint"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintTextColor="@color/blue_dark"
                        android:textColorHint="@color/gray_dark"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editFirstName"
                            android:maxLength="20"
                            android:singleLine="true"
                            style="@style/style_text_input_edit"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    style="@style/style_profile_tab"
                    android:padding="0dp"
                    android:layout_marginBottom="2dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name_hint"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintTextColor="@color/blue_dark"
                        android:textColorHint="@color/gray_dark"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editLastName"
                            android:maxLength="20"
                            android:singleLine="true"
                            style="@style/style_text_input_edit"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    style="@style/style_profile_tab"
                    android:padding="0dp"
                    android:layout_marginBottom="2dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mail_hint"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintTextColor="@color/blue_dark"
                        android:textColorHint="@color/gray_dark"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editMail"
                            android:maxLength="50"
                            android:singleLine="true"
                            style="@style/style_text_input_edit"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnConfirm"
                android:text="CONFIRM"
                style="@style/style_button_account"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>