<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutAccountDetailRegisterHeader"
        style="@style/style_header_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:id="@+id/imgBackFromAccountDetailRegister"
            style="@style/style_icon"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/txtHeader"
            style="@style/style_txt_header"
            android:text="COMPLETE  PROFILE"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgBackFromAccountDetailRegister"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/imgAccountInfoHome"/>

        <ImageView
            android:id="@+id/imgAccountInfoHome"
            style="@style/style_icon"
            android:src="@drawable/ic_home"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/layoutAccountDetailRegisterHeader"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/gray_background">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutAvatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="30dp"
                android:background="@color/white">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardViewAccountAvatar"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:backgroundTint="@color/gray"
                        app:cardCornerRadius="180dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            app:cardCornerRadius="180dp"
                            android:layout_gravity="center">

                            <ImageView
                                android:id="@+id/imgAccountInfoAvatar"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleY="1.35"
                                android:scaleX="1.35"/>

                        </androidx.cardview.widget.CardView>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardViewEditProfileAvatar"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/gray"
                        app:cardCornerRadius="180dp"
                        app:layout_constraintRight_toRightOf="@+id/cardViewAccountAvatar"
                        app:layout_constraintBottom_toBottomOf="@+id/cardViewAccountAvatar">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            app:cardCornerRadius="180dp"
                            android:layout_gravity="center">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="5dp"
                                android:src="@drawable/ic_camera"
                                app:tint="@color/gray" />

                        </androidx.cardview.widget.CardView>

                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/style_profile_tab"
                android:padding="0dp"
                android:layout_marginBottom="2dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLoginUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintTextColor="@color/blue_dark"
                    android:textColorHint="@color/gray_dark"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editUsername"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16dp"
                        android:singleLine="true"
                        android:maxLength="20"
                        android:background="@color/white"
                        style="@style/style_txt_account_info"/>

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/style_profile_tab"
                android:paddingVertical="0dp"
                android:background="@color/white"
                android:layout_marginTop="2dp">

                <TextView
                    android:id="@+id/lblNumber"
                    android:text="Number"
                    android:paddingRight="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/style_label_account_info" />

                <EditText
                    android:id="@+id/editPhoneNumber"
                    android:hint="@string/number_hint"
                    android:layout_marginLeft="10dp"
                    android:singleLine="true"
                    app:layout_constraintLeft_toRightOf="@+id/lblNumber"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/style_txt_account_info" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/layoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.constraintlayout.widget.ConstraintLayout
                    style="@style/style_profile_tab"
                    android:paddingVertical="0dp"
                    android:background="@color/white"
                    android:layout_marginTop="2dp">

                    <TextView
                        android:id="@+id/lblPassword"
                        android:text="Password"
                        android:paddingRight="10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        style="@style/style_label_account_info" />

                    <EditText
                        android:id="@+id/editLoginPassword"
                        android:hint="@string/password_hint"
                        android:layout_marginLeft="10dp"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toRightOf="@id/lblPassword"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        style="@style/style_txt_account_info" />

                    <ImageView
                        android:id="@+id/imgDisplayPassword"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:visibility="invisible"
                        android:src="@drawable/ic_visibility_off"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    style="@style/style_profile_tab"
                    android:paddingVertical="0dp"
                    android:background="@color/white"
                    android:layout_marginTop="2dp">

                    <TextView
                        android:id="@+id/lblConfirmPassword"
                        android:text="Confirm Password"
                        android:gravity="left"
                        android:paddingRight="10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        style="@style/style_label_account_info" />

                    <EditText
                        android:id="@+id/editPasswordConfirm"
                        android:hint="@string/password_hint"
                        android:layout_marginLeft="10dp"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        app:layout_constraintLeft_toRightOf="@+id/lblConfirmPassword"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        style="@style/style_txt_account_info" />

                    <ImageView
                        android:id="@+id/imgDisplayPasswordConfirm"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:visibility="invisible"
                        android:src="@drawable/ic_visibility_off"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/style_profile_tab"
                android:paddingVertical="0dp"
                android:background="@color/white"
                android:layout_marginTop="2dp">

                <TextView
                    android:id="@+id/lblFirstName"
                    android:text="First name"
                    android:paddingRight="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/style_label_account_info" />

                <EditText
                    android:id="@+id/editFirstName"
                    android:hint="@string/first_name_hint"
                    android:singleLine="true"
                    app:layout_constraintLeft_toRightOf="@+id/lblFirstName"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/style_txt_account_info" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/style_profile_tab"
                android:paddingVertical="0dp"
                android:background="@color/white"
                android:layout_marginTop="2dp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineLastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.25"/>

                <TextView
                    android:id="@+id/lblLastName"
                    android:text="Last name"
                    android:paddingRight="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/style_label_account_info" />

                <EditText
                    android:id="@+id/editLastName"
                    android:hint="@string/last_name_hint"
                    android:layout_marginLeft="10dp"
                    android:singleLine="true"
                    app:layout_constraintLeft_toRightOf="@+id/lblLastName"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/style_txt_account_info" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/style_profile_tab"
                android:paddingVertical="0dp"
                android:background="@color/white"
                android:layout_marginVertical="2dp">

                <TextView
                    android:id="@+id/lblMail"
                    android:text="Email"
                    android:paddingRight="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/style_label_account_info" />

                <EditText
                    android:id="@+id/editMail"
                    android:hint="@string/mail_hint"
                    android:layout_marginLeft="10dp"
                    android:singleLine="true"
                    app:layout_constraintLeft_toRightOf="@+id/lblMail"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/style_txt_account_info" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/btnConfirm"
                android:text="CONFIRM"
                style="@style/style_button_account"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="50dp"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>